# FastAPI-Idade

./: README.md  pyproject.toml
FastAPI-Idade/: Deletar cadastros.bru  Editar cadastro.bru  Get usuário.bru  Postar cadastro.bru  bruno.json
app/: main.py
